Completed the PC pages

--- a/public/features/parish-council/parish-council-home.html
+++ b/public/features/parish-council/parish-council-home.html
@@ -7,11 +7,13 @@
 <div class="text-content flex-container flex-container-row flex-cols">
     <div>
         A parish council is a local authority that makes decisions on behalf of the people in the parish.
-        It is the level government closest to the community, with the district authority (<a href="http://www2.stroud.gov.uk/cmislive_public/ParishCouncils.aspx">
-        Stroud District Council</a>) above it in the hierarchy.
+        It is the level government closest to the community, with the district authority (in our case,
+        Stroud District Council) above it in the hierarchy.
     </div>
     <div>
-
+        <a href="http://www2.stroud.gov.uk/cmislive_public/ParishCouncils.aspx">
+            <img src="/web/features/parish-council/img/sdc-logo.jpeg" height="75px">
+        </a>
     </div>
 </div>
 <div class="text-content flex-container flex-container-row flex-cols">
