--- a/public/features/parish-council/parish-council.html
+++ b/public/features/parish-council/parish-council.html
@@ -1,6 +1,7 @@
 <page-tabs
         heading="pcc.title"
         subheading="pcc.subtitle"
+        background="pcc.titleBkg"
         feature="pcc.feature"
         pages="pcc.pages">
 </page-tabs>
