--- a/public/features/the-horses-mouth/horses-mouth.html
+++ b/public/features/the-horses-mouth/horses-mouth.html
@@ -2,7 +2,7 @@
 <div nv-file-drop="" uploader="hmc.uploader" filters="queueLimit, customFilter">
 
     <div class="hm-uploader">
-        <div ng-if="!hmc.uploader.isHTML5" class="page-banner hm-title">
+        <div ng-if="!hmc.uploader.isHTML5" class="hm-title">
             <div>News and Events in the Parish of Horsley</div>
         </div>
         <div ng-if="hmc.uploader.isHTML5">
