--- a/public/features/page-tabs/page-tabs.html
+++ b/public/features/page-tabs/page-tabs.html
@@ -1,5 +1,5 @@
 
-    <div class="flex-container flex-container-row">
+    <div class="flex-container flex-container-row pl-title" ng-style="{'background-image':'url({{pl.background}})'}">
         <div class="page-banner">
             <div class="text-content title">{{pl.heading}}</div>
             <div class="text-content subtitle">{{pl.subheading}}</div>
