Add details of Horsley Court Planning Application Dismissal

--- a/public/features/parish-council/parish-council-Planning.html
+++ b/public/features/parish-council/parish-council-Planning.html
@@ -63,3 +63,33 @@
         </table>
     </div>
 </div>
+
+<hr>
+
+<div class="text-content flex-container flex-container-row">
+    <div>
+        <h3>Horsley Court Planning Appeal Dismissed - S.16/0940/FUL</h3>
+
+        Appeal against SDC's original decision to refuse planning permission has been dismissed.<br>
+        <br>
+        In summary, the main reasons for the Inspector's decision were as follows:<br>
+        <ul>
+            <li>The site is outside the Settlement Boundary and so against the Policies of the Stroud Local Plan.</li>
+            <li>The attempt to use the Kingswood decision as precedent is rejected because of the manifest differences in size and facilities between the two settlements. Horsley, unlike Kingswood, is also in the AONB.</li>
+            <li>The proposed development would be in conflict with the Local Plan's stated aim of protecting the built and natural environment. It would look out of place and involve the cutting down of a significant number of trees.</li>
+            <li>The development would have a significant detrimental effect on the setting of the heritage assets of Horsley Court.</li>
+        </ul>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row">
+    <div>
+        <table class="pc-file-list">
+            <tbody>
+            <tr>
+                <td flex="20"><a href="/glos/features/parish-council/docs/INSPECTORS APPEAL DECISION.pdf"><img src="/glos/img/ico-pdf.png"></a></td>
+                <td flex="50"><a href="/glos/features/parish-council/docs/INSPECTORS APPEAL DECISION.pdf">Inspector's Appeal Decision</a></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
