Fix broken link in PC planning page

--- a/public/features/parish-council/parish-council-Planning.html
+++ b/public/features/parish-council/parish-council-Planning.html
@@ -52,8 +52,8 @@
                     <td flex="50"><a href="/glos/features/parish-council/docs/Barton End - HPC response 1.pdf">Barton End - HPC response</a></td>
                 </tr>
                 <tr>
-                    <td flex="20"><a href="/glos/features/parish-council/docs/E mail H Simkiss 1.pdf"><img src="/glos/img/ico-pdf.png"></a></td>
-                    <td flex="50"><a href="/glos/features/parish-council/docs/E mail H Simkiss 1.pdf">E mail H Simkiss</a></td>
+                    <td flex="20"><a href="/glos/features/parish-council/docs/E mail H simkiss 1.pdf"><img src="/glos/img/ico-pdf.png"></a></td>
+                    <td flex="50"><a href="/glos/features/parish-council/docs/E mail H simkiss 1.pdf">E mail H Simkiss</a></td>
                 </tr>
                 <tr>
                     <td flex="20"><a href="/glos/features/parish-council/docs/Email Kate Kate Holly Simkiss 1.pdf"><img src="/glos/img/ico-pdf.png"></a></td>
