Add sitemaps and search engine micro data and ld-json objects

--- a/public/features/horsley-community-shop/shop.html
+++ b/public/features/horsley-community-shop/shop.html
@@ -1,4 +1,21 @@
-
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Store",
+  "name": "Horsley Community Shop",
+  "description": "We sell everyday store cupboard basics, snacks and drinks, organic produce, and lots of locally produced goods such as Jonathan Crump's Single and Double Gloucester cheeses, Plenty Pies, Day's Cottage apple juice and the famous Horsley Sausage ("a succulent, finely balanced, terrific banger", Matthew Fort, The Guardian).",
+  "openingHours": "Mon-Fri 08:30-16:00, Sat 10:00-12:00, Sun 9:00-12:00.",
+  "telephone": "01453 836662",
+  "address":
+  {
+  "@type": "PostalAddress",
+  "streetAddress": "The Pavilion, Priory Fields, Horsley",
+  "addressLocality": "Stroud",
+  "addressRegion": "Gloucestershire",
+  "postalCode": "GL6 0PT"
+  }
+}
+</script>
 <div class="flex-container flex-container-row cs-header">
     <div class="pad-r-10"><a href="https://www.facebook.com/Horsley-Community-Shop-1386629328234315/"><img src="/glos/img/facebook-icon-5.png" width="30px"></a></div>
     <div class="pad-r-10"><a href="http://facebook.us14.list-manage.com/track/click?u=fc145a24a220e556eca4e81de&id=6e68f8653e&e=5f28b4791a"><img src="/glos/img/Twitter-icon.png" width="30px"></a></div>
