Add site map and fix json-ld issues

--- a/public/features/the-horses-mouth/horses-mouth.html
+++ b/public/features/the-horses-mouth/horses-mouth.html
@@ -6,7 +6,7 @@
   "name": "The Horse's Mouth",
   "description": "Horsley Parish's free monthly magazine"
 }
-</script>
+</script>i
 <div nv-file-drop="" uploader="hmc.uploader" filters="queueLimit, customFilter">
     <div class="hm-uploader">
         <div ng-if="!hmc.uploader.isHTML5" class="hm-title">
