change shop page to link to mail chimp archive Add initial page template for user admin

--- a/public/features/horsley-community-shop/shop.html
+++ b/public/features/horsley-community-shop/shop.html
@@ -4,7 +4,7 @@
   "@type": "Store",
   "name": "Horsley Community Shop",
   "description": "We sell everyday store cupboard basics, snacks and drinks, organic produce, and lots of locally produced goods such as Jonathan Crump's Single and Double Gloucester cheeses, Plenty Pies, Day's Cottage apple juice and the famous Horsley Sausage ("a succulent, finely balanced, terrific banger", Matthew Fort, The Guardian).",
-  "openingHours": "Mon-Fri 08:30-16:00, Sat 10:00-12:00, Sun 9:00-12:00.",
+  "openingHours": "Mon-Fri 08:30-17:00, Sat 10:00-12:00, Sun 9:00-12:00.",
   "telephone": "01453 836662",
   "address":
   {
@@ -32,6 +32,24 @@
         </a>
     </div>
 </div>
-<div class="flex-container flex-container-row cs-idocs">
-    <iframe src="https://docs.google.com/document/d/15fGKdVd6pjS_1_IEpm-pRSFOlAInTRJ2t1z5mgsQDwM/pub?embedded=true"></iframe>
+<div class="flex-container flex-container-row">
+    <div class="cs-bg">
+        <img src="/glos/features/horsley-community-shop/img/shop1.jpg" width="350px" class="cs-img"><br>
+        <p>
+            <img src="/glos/features/horsley-community-shop/img/shop_inside1.jpg" width="190px" class="cs-img">
+            <img src="/glos/features/horsley-community-shop/img/sausages.jpg" width="150px" class="cs-img">
+        </p>
+    </div>
+    <div>
+        <div class="cs-txt">
+            <h2>LATEST SHOP NEWS</h2>
+            <h3>Click any of the links below for information on
+                shop opening hours and special offers, plus
+                other local news.</h3>
+            </div>
+        <div id="mailchimpArchive"></div>
+        <script type="text/javascript">
+            postscribe('#mailchimpArchive', '<script language="javascript" src="//facebook.us14.list-manage.com/generate-js/?u=fc145a24a220e556eca4e81de&fid=3731&show=15" type="text/javascript"><\/script>');
+        </script>
+    </div>
 </div>
