--- a/public/features/parish-council/parish-council-documents.html
+++ b/public/features/parish-council/parish-council-documents.html
@@ -1,7 +1,50 @@
-<div class="flex-container" >
-    <div ng-if="pl.scope.files.length > 0" flex class="flex-item pc-post-it" ng-repeat="file in pl.scope.documents">
-        <a href="https://drive.google.com/file/d/{{file.id}}/view">{{file.name}}</a>
-        <p></p>
+
+<div layout="row" ng-controller="ParishCouncilController as pcc">
+    <div flex class="pc-report-list">
+        <h2>Reports</h2>
+        <div layout="column">
+            <div>
+                <p>Click a report to view it on-line using Google docs.</p>
+            </div>
+            <div ng-if="pcc.reports.length > 0" ng-repeat="file in pcc.reports">
+                <a href="https://drive.google.com/file/d/{{file.id}}/view">{{file.name}}</a>
+            </div>
+            <div ng-if="pcc.reports.length === 0">No reports to display at present.</div>
+        </div>
     </div>
-    <div ng-if="pl.scope.files.length === 0">No rerports or documents to display at present.</div>
+    <div flex class="pc-report-list">
+        <h2>Documents</h2>
+        <div layout="column">
+            <div ng-if="pcc.documents.length > 0" ng-repeat="file in pcc.documents">
+                <a ng-if="file.mimeType !== 'application/vnd.google-apps.folder'" href="https://drive.google.com/file/d/{{file.id}}/view">{{file.name}}</a>
+            </div>
+        </div>
+        <h3>Finances</h3>
+        <div layout="column">
+
+            <div>
+                <p>Click a year to view financial reports for the period</p>
+            </div>
+
+            <h4><a ng-click="pcc.toggle_showFR2017()">2016-17</a></h4>
+            <div ng-if="pcc.showFR2017 && pcc.FR2017.length > 0" ng-repeat="file in pcc.FR2017">
+                <a href="https://drive.google.com/file/d/{{file.id}}/view">{{file.name}}</a>
+            </div>
+            <div ng-if="pcc.showFR2017 && pcc.FR2017.length === 0">No 2016-17 documents to display at present.</div>
+
+            <h4><a ng-click="pcc.toggle_showFR2018()">2017-18</a></h4>
+            <div ng-if="pcc.showFR2018 && pcc.FR2018.length > 0" ng-repeat="file in pcc.FR2018">
+                <a href="https://drive.google.com/file/d/{{file.id}}/view">{{file.name}}</a>
+            </div>
+            <div ng-if="pcc.showFR2018 && pcc.FR2018.length === 0">No 2017-18 documents to display at present.</div>
+
+            <h4><a ng-click="pcc.toggle_showFR2019()">2018-19</a></h4>
+            <div ng-if="pcc.showFR2019 && pcc.FR2019.length > 0" ng-repeat="file in pcc.FR2019">
+                <a href="https://drive.google.com/file/d/{{file.id}}/view">{{file.name}}</a>
+            </div>
+            <div ng-if="pcc.showFR2019 && pcc.FR2019.length === 0">No 2018-19 documents to display at present.</div>
+
+        </div>
+    </div>
+
 </div>
