--- a/public/features/parish-council/parish-council-Planning.html
+++ b/public/features/parish-council/parish-council-Planning.html
@@ -1,4 +1,4 @@
-<div ng-cloak>
+<div ng-cloak ng-controller="ParishCouncilController as pcc">
     <md-content>
         <md-tabs md-dynamic-height md-border-bottom>
             <md-tab label="Notice">
@@ -9,12 +9,23 @@
                 </md-content>
             <md-tab label="Neighbourhood Plan">
                 <md-content class="md-padding">
-                    <h3>Local Neighbourhood Plan Documents</h3>
-                    <div layout="row" ng-controller="ParishCouncilController as pcc">
-                        <div flex class="pc-report-list">
-                            <iframe class="pc-iframe" style="height:1200px" scrolling="yes" title="here"
-                                    src="https://drive.google.com/embeddedfolderview?id=1qpNsCUKS54geU-sy43QVDiW12CBvz9O0#grid" style="width:100%; border:0;">
-                            </iframe>
+                    <div layout="row">
+                        <h4>Local Neighbourhood Plan Documents</h4>
+                    </div>
+                    <div>
+                        <iframe class="pc-iframe-planning" style="height:{{pcc.np_docs.size}};" scrolling="yes" title="here"
+                                src="https://drive.google.com/embeddedfolderview?id=1qpNsCUKS54geU-sy43QVDiW12CBvz9O0#grid" style="width:100%; border:0;">
+                        </iframe>
+                    </div>
+                    <div layout="row">
+                        <p>Click an image (above) to view a document in Google viewer, or if you prefer to download
+                            a document direct to your PC, then click on a link below.</p>
+                    </div>
+                    <div>
+                        <div ng-if="pcc.np_docs && pcc.np_docs.length > 0" ng-repeat="file in pcc.np_docs | orderBy: '-name'">
+                            <a ng-if="file.mimeType !== 'application/vnd.google-apps.folder'" href="https://docs.google.com/uc?export=download&id={{file.id}}">
+                                {{file.name}}
+                            </a>
                         </div>
                     </div>
                 </md-content>
