New header. Fixed birds. Improved about page.

--- a/public/features/church-and-cemetery/church-and-cemetery.html
+++ b/public/features/church-and-cemetery/church-and-cemetery.html
@@ -6,12 +6,13 @@
   "name": "Horsley Parish Council"
 }
 </script>
-
-<page-tabs
-        heading="ccc.title"
-        subheading="ccc.subtitle"
-        background="ccc.titleBkg"
-        feature="ccc.feature"
-        pages="ccc.pages"
-        scope="ccc">
-</page-tabs>
+<div class="page-grass-top">
+    <page-tabs
+            heading="ccc.title"
+            subheading="ccc.subtitle"
+            background="ccc.titleBkg"
+            feature="ccc.feature"
+            pages="ccc.pages"
+            scope="ccc">
+    </page-tabs>
+</div>
