--- a/public/features/home-page/home-page.html
+++ b/public/features/home-page/home-page.html
@@ -14,7 +14,7 @@
         <div class="text-content subtitle">{{hpc.config.subtitle}}</div>
     </div>
     <div class="page-columns">
-        <div>
+        <div style="position: relative; top: -70px;">
             <div class="page-columns">
                 <div>
                     <img src="/glos/img/horsleyNP.png" width="180" style="padding-bottom: 20px;"/>
@@ -30,10 +30,17 @@
                 A full copy of the draft plan can be viewed on this website <i>(click link below)</i>.
                 A number of hamlet meetings will take place during October when villagers will have the
                 opportunity to give their views.
-                <p style="padding: 30px 0px 0px 110px">
-                    <a href="/glos#/parish-council?page=Planning" class="btn btn-default">View the Neighbourhood Plan documents</a>
+                <p style="padding: 30px 0px 30px 90px">
+                    <span>
+                        <a href="/glos#/parish-council?page=Planning">
+                            <button type="button" mdbBtn class="btn-info waves-light" mdbWavesEffect><i class="fa fa-file-pdf-o left"></i><b> View the plan on-line </b></button></a>
+                    </span>
+                    <span>
+                        <a href="mailto:neighbourhood.plan@horsley.co.uk?subject=Feedback/Comments">
+                            <button type="button" mdbBtn class="btn-email waves-light" mdbWavesEffect><i class="fa fa-envelope left"></i> Send us your comments </button>
+                        </a>
+                    </span>
                 </p>
-                <br>
             </div>
             <div class="bg-main-text">
                 <h4>Learn about the proposals, join in the debate and have your say as to how the villages of
