Add link to NP privacy policy

--- a/public/features/home-page/home-page.html
+++ b/public/features/home-page/home-page.html
@@ -58,6 +58,7 @@
 
         <div class="np-reg-form">
             <div ng-include="'/glos/features/home-page/np.registration.html'"></div>
+            <div><br><a href="https://gallery.mailchimp.com/ab555b45418de053b97da1d03/files/041c0231-a5e0-4296-ba14-b4d9a15b8e5a/2018_10_01_HNP_email_newsletter_privacy_policy_1.3.pdf">Click here to read our privacy policy</a></div>
         </div>
     </div>
 </div>
