Remove optional form fields

--- a/public/features/home-page/np.registration.html
+++ b/public/features/home-page/np.registration.html
@@ -573,18 +573,6 @@
             <input type="hidden" name="id" value="20e9741fdd">
 
 
-            <!-- people should not fill these in and expect good things -->
-            <div class="field-shift" aria-label="Please leave the following three fields empty">
-                <label for="b_name">Name: </label>
-                <input type="text" name="b_name" tabindex="-1" value="" placeholder="Freddie" id="b_name">
-
-                <label for="b_email">Email: </label>
-                <input type="email" name="b_email" tabindex="-1" value="" placeholder="youremail@gmail.com" id="b_email">
-
-                <label for="b_comment">Comment: </label>
-                <textarea name="b_comment" tabindex="-1" placeholder="Please comment" id="b_comment"></textarea>
-            </div>
-
             <div id="mergeTable" class="mergeTable">
 
 
@@ -601,7 +589,7 @@
 
 
                 <div class="mergeRow dojoDndItem mergeRow-text" id="mergeRow-1">
-                    <label for="MERGE1">First Name (Optional)</label>
+                    <label for="MERGE1">First Name</label>
                     <div class="field-group">
                         <input type="text" name="MERGE1" id="MERGE1" size="25" value="">
 
@@ -613,7 +601,7 @@
 
 
                 <div class="mergeRow dojoDndItem mergeRow-text" id="mergeRow-2">
-                    <label for="MERGE2">Last Name (Optional)</label>
+                    <label for="MERGE2">Last Name</label>
                     <div class="field-group">
                         <input type="text" name="MERGE2" id="MERGE2" size="25" value="">
 
