--- a/public/features/home-page/home-page.html
+++ b/public/features/home-page/home-page.html
@@ -36,7 +36,7 @@
                             <button type="button" mdbBtn class="btn-info waves-light" mdbWavesEffect><i class="fa fa-file-pdf-o left"></i><b> View the plan on-line </b></button></a>
                     </span>
                     <span>
-                        <a href="mailto:neighbourhood.plan@horsley.co.uk?subject=Feedback/Comments">
+                        <a href="mailto:neighbourhood.plan@horsleyparish.co.uk?subject=Feedback/Comments">
                             <button type="button" mdbBtn class="btn-email waves-light" mdbWavesEffect><i class="fa fa-envelope left"></i> Send us your comments </button>
                         </a>
                     </span>
