--- a/public/features/parish-council/parish-council-Planning.html
+++ b/public/features/parish-council/parish-council-Planning.html
@@ -7,7 +7,7 @@
                         <div flex><h4>Local Neighbourhood Plan Documents</h4></div>
                         <div flex>
                             <span>
-                                <a href="mailto:neighbourhood.plan@horsley.co.uk?subject=Feedback/Comments">
+                                <a href="mailto:neighbourhood.plan@horsleyparish.co.uk?subject=Feedback/Comments">
                                     <button type="button" mdbBtn class="btn-email waves-light" mdbWavesEffect><i class="fa fa-envelope left"></i> Send us your comments </button>
                                 </a>
                             </span>
