Parish council changes requested in June

--- a/public/features/church-and-cemetery/church-and-cemetery-cemetery.html
+++ b/public/features/church-and-cemetery/church-and-cemetery-cemetery.html
@@ -1,4 +1,3 @@
-<div class="text-content flex-container flex-container-row">
-    <iframe class="pc-iframe"  style="height:2600px;"
-            src="https://docs.google.com/document/d/e/2PACX-1vS8a6t-L8qcfekchylmS3Zix2YDhKN4lFWLHf9GSOlyLU3v0p3c7gBH1xX3W2o9yOVFAtDGExzpIIpA/pub?embedded=true"></iframe>
-</div>
+
+<iframe class="pc-iframe" style="margin-left: -30px" src="https://docs.google.com/viewer?srcid=19I3hqeZh-sLvxxpRZETGkr2FT841XSVP&pid=explorer&efh=false&a=v&chrome=false&embedded=true" width="580px" height="600px"></iframe>
+
