Remove feedback buttons/mail-chimp from website

--- a/public/features/home-page/home-page.html
+++ b/public/features/home-page/home-page.html
@@ -22,43 +22,20 @@
                 <div class="bg-main-text-gr"><p>
                     <b>The Horsley Neighbourhood Plan was launched at the Horsley Village Fete on 15 September 2018.
                         It defines development proposals for the village and the 16 surrounding hamlets for the next
-                        20 years. A 6-week consultation period now begins.</b>
+                        20 years.</b>
                 </p>
                 </div>
             </div>
             <div class="bg-main-text-gr">
                 A full copy of the draft plan can be viewed on this website <i>(click link below)</i>.
-                A number of hamlet meetings will take place during October when villagers will have the
-                opportunity to give their views.
                 <p style="padding: 30px 0px 30px 90px">
                     <span>
                         <a href="/glos#/parish-council?page=Planning">
                             <button type="button" mdbBtn class="btn-info waves-light" mdbWavesEffect><i class="fa fa-file-pdf-o left"></i><b> View the plan on-line </b></button></a>
                     </span>
-                    <span>
-                        <a href="mailto:neighbourhood.plan@horsleyparish.co.uk?subject=Feedback/Comments">
-                            <button type="button" mdbBtn class="btn-email waves-light" mdbWavesEffect><i class="fa fa-envelope left"></i> Send us your comments </button>
-                        </a>
-                    </span>
                 </p>
-            </div>
-            <div class="bg-main-text">
-                <h4>Learn about the proposals, join in the debate and have your say as to how the villages of
-                    Horsley parish will develop over the next two decades.
-                </h4>
-                <p>
-                    The Parish Council is keen to share the proposals and hear views about them from those who
-                    live and work in Horsley Parish (Gloucestershire). They encourage residents to subscribe
-                    to the newsletter (see form on the right), although every effort will be made to include
-                    people who are not on email.
-                </p>
-
             </div>
         </div>
 
-        <div class="np-reg-form">
-            <div ng-include="'/glos/features/home-page/np.registration.html'"></div>
-            <div><br><a href="https://gallery.mailchimp.com/ab555b45418de053b97da1d03/files/041c0231-a5e0-4296-ba14-b4d9a15b8e5a/2018_10_01_HNP_email_newsletter_privacy_policy_1.3.pdf">Click here to read our privacy policy</a></div>
-        </div>
     </div>
 </div>
